# connector-service

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .nextest.toml  .typos.toml  ADD_CONNECTOR.md  ApiValidationDatatrans.md  CHANGELOG.md  CLAUDE.md  CONNECTORS.md  CONNECTOR_PRS_UPDATED_REVIEW.md  CREDS.md  Cargo.toml  Cashfree_UPI_Implementation_Guide.md  Changelog.md  ConnectorImplementationFlow.md  ConnectorImplementattionFlow.md  Dockerfile  ENHANCEMENT_SUMMARY.md  Errors.md  Gateway_Integration_Instruction_Prompt.md  HSBCUPI_CONNECTOR_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ImplementationDifferenceAci.md  ImplementationDifferenceDatatrans.md  ImplementationDifferenceDlocal.md  ImplementationDifferencePlacetopay.md  ImplementationDifferenceRapyd.md  ImplementationDifferencedatatrans.md  METADATA_USAGE.md  Makefile  NotesByXyne.md  NotesByXyneDatatrans.md  NotesByXynePlacetopay.md  NotesByXyneRapyd.md  NotesByXyneWorldpayxml.md  NotesByXyneaci.md  (+86 more)
backend/api_models/: Cargo.toml
backend/api_models/src/: admin.rs  lib.rs  payment_method.rs  payments.rs  webhooks.rs
backend/cards/: Cargo.toml
backend/cards/src/: lib.rs  validate.rs
backend/common_enums/: Cargo.toml
backend/common_enums/src/: enums.rs
backend/common_utils/: Cargo.toml
backend/common_utils/src/: config_patch.rs  consts.rs  crypto.rs  custom_serde.rs  dapr.rs  errors.rs  event_publisher.rs  events.rs  ext_traits.rs  fp_utils.rs  global_id.rs  id_type.rs  lib.rs  lineage.rs  macros.rs  metadata.rs  new_types.rs  pii.rs  request.rs  superposition_config.rs  types.rs
backend/composite-service/: Cargo.toml
backend/composite-service/src/: composite_payments.rs  compositpayments.rs  lib.rs  payments.rs  transformers.rs  utils.rs
backend/composite-service/tests/: composite_request_schema_check.rs
backend/connector-integration/: CHANGELOG.md  Cargo.toml
backend/connector-integration/src/: access_token.rs  connectors.rs  default_implementations.rs  lib.rs  types.rs  utils.rs  webhook_utils.rs
backend/domain_types/: Cargo.toml
backend/domain_types/src/: api.rs  connector_flow.rs  connector_types.rs  consts.rs  errors.rs  lib.rs  mandates.rs  payment_address.rs  payment_method_data.rs  payout_types.rs  router_data.rs  router_data_v2.rs  router_flow_types.rs  router_request_types.rs  router_response_types.rs  types.rs  utils.rs  validation.rs
backend/external-services/: Cargo.toml
backend/external-services/src/: lib.rs  service.rs  shared_metrics.rs  vault.rs
backend/ffi/: Cargo.toml  build.rs  cbindgen.toml  index.d.ts  index.js  package-lock.json  package.json
backend/ffi-uniffi/: Cargo.toml  build.rs  uniffi.toml
backend/ffi-uniffi/examples/: example_uniffi.py  example_with_http.py
backend/ffi-uniffi/src/: connector_ffi.udl  lib.rs  uniffi-bindgen.rs
backend/ffi/examples/: usage.md
backend/ffi/src/: bindings.rs  error.rs  errors.rs  ffi_wrapper.rs  handlers.rs  lib.rs  macros.rs  tracing_init.rs  tracing_writer.rs  types.rs  utils.rs  wrappers.rs
backend/ffi/tests/: test_node.js
backend/field-probe/: Cargo.toml  build.rs  patch-config.toml  probe-config.toml
backend/field-probe/src/: auth.rs  config.rs  error_parsing.rs  flow_metadata.rs  flow_runners.rs  json_utils.rs  main.rs  orchestrator.rs  patcher.rs  patching.rs  probe_engine.rs  registry.rs  requests.rs  sample_data.rs  status.rs  types.rs
backend/grpc-api-types/: Cargo.toml  build.rs
backend/grpc-api-types/proto/: composite_payment.proto  composite_service.proto  composite_services.proto  health_check.proto  payment.proto  payment_methods.proto  payouts.proto  sdk_config.proto  sdk_options.proto  services.proto
backend/grpc-api-types/src/: lib.rs  test_enum_deserializer.rs
backend/ucs-connector-tests/: Cargo.toml  GENERATOR_COMMANDS.md  README.md  report.json  test_report.md
backend/ucs-connector-tests/docs/: code-walkthrough.md  test-writing-pattern.md
backend/ucs-connector-tests/src/: lib.rs
backend/ucs-connector-tests/test_report/: test_overview.md
backend/ucs-connector-tests/tests/: adyen.rs  authorizedotnet.rs  cucumber_tests.rs  cybersource.rs  stripe.rs
backend/ucs_env/: Cargo.toml
backend/ucs_env/src/: configs.rs  error.rs
backend/ucs_interface_common/: Cargo.toml
backend/ucs_interface_common/src/: auth.rs  config.rs  error.rs  flow.rs  headers.rs  metadata.rs  middleware.rs  request.rs
crates/internal/composite-service/: Cargo.toml
crates/types-traits/grpc-api-types/: Cargo.toml  build.rs
examples/example-dapr-kafka/: Cargo.toml  README.md  dapr_architecture_and_communication.md  demo_manual.sh  demo_rust.sh  kafka-dapr.yaml
examples/example-dapr-kafka/components/: kafka-pubsub.yaml
examples/example-dapr-kafka/src/: publisher.rs
grace-cli/: README.md  pyproject.toml
grace-cli/.grace/adyen/: technical_specification.md
grace-cli/src/grace_cli/: __init__.py  cli.py
sdk/python/: Makefile  README.md  connector_client.py  main.py  pyproject.toml  test_smoke.py
sdk/python/examples/: example.py  test_pack.py
sdk/python/smoke-test/: test_smoke.py  test_smoke_composite.py  test_smoke_grpc.py  test_smoke_webhook.py
sdk/python/tests/: client_sanity_runner.py  run_flow.py  test_all_flows_smoke.py  test_flow_structure.py
sdk/rust/: Cargo.toml  Makefile  README.md
sdk/rust-grpc-client/: Cargo.toml  README.md
sdk/rust-grpc-client/src/: lib.rs
sdk/rust/examples/: basic.rs
sdk/rust/smoke-test/: Cargo.toml  build.rs
sdk/rust/src/: _generated_connector_client.rs  _generated_grpc_client.rs  connector_client.rs  error.rs  grpc_config.rs  http_client.rs  lib.rs  main.rs
stubs/common_utils/: Cargo.toml
tools/pr-review/: bulk_report.json  bulk_test.py  cmds.md  learned_data.json  pr-review.toml  pyproject.toml  report_cp003_check.json  report_cp003_check_2.json  report_grpc_retest.json  report_part1.json  report_part2.json  report_part3a.json  report_part3b.json  report_post_fix.json  report_post_fix_broad.json  report_post_fix_part1.json  report_post_fix_part2.json  report_validation.json
(+7057 files in other folders)
