[package]
name = "payu-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Hyperswitch/UCS dependencies
common_enums = { path = "../common_enums" }
common_utils = { path = "../common_utils" }
domain_types = { path = "../domain_types" }
error-stack = "0.4"
hyperswitch_masking = { path = "../hyperswitch_masking" }
masking = { path = "../masking" }

# Crypto dependencies
sha2 = "0.10"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }