[package]
name = "payu-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"

# Hyperswitch/UCS dependencies
common_enums = { path = "./backend/common_enums", package = "ucs_common_enums" }
common_utils = { path = "./backend/common_utils", package = "ucs_common_utils" }
domain_types = { path = "./backend/domain_types" }
error-stack = "0.4"
interfaces = { path = "./backend/interfaces" }
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "2025.09.24.0", package = "masking" }
connector-integration = { path = "./backend/connector-integration" }

# Crypto dependencies
sha2 = "0.10"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }