[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grace-cli"
version = "0.1.0"
description = "Interactive CLI for creating Hyperswitch payment connectors"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Juspay Technologies", email = "oss@juspay.in"}
]
keywords = ["hyperswitch", "payments", "connector", "code-generator", "grace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
grace = "grace_cli.cli:main"

[project.urls]
Homepage = "https://github.com/juspay/hyperswitch"
Repository = "https://github.com/juspay/hyperswitch"
Documentation = "https://docs.hyperswitch.io"

[tool.setuptools]
packages = ["grace_cli", "grace_cli.wizard", "grace_cli.agent"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
