[package]
name = "api_models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
hyperswitch_common_utils = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "common_utils" }
hyperswitch_common_enums = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "common_enums" }
masking = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4" }
utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order"] }