[package]
name = "api_models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
common_utils = { version = "0.1.0", path = "../common_utils" }
common_enums = { version = "*", path = "../common_enums" }
masking = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4" }
utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order"] }
