[package]
name = "api_models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
common_utils = { version = "0.1.0", path = "../common_utils" }
common_enums = { version = "*", path = "../common_enums" }
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "masking" }
utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order"] }
strum = { version = "0.26", features = ["derive"] }
reqwest = { version = "0.11.27", optional = true }
actix-web = { version = "4.11.0", optional = true }
mime = "0.3.17"

[features]
default = ["reqwest", "actix-web"]
reqwest = ["dep:reqwest"]
actix-web = ["dep:actix-web"]
detailed_errors = []