[package]
name = "common_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = "0.4.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
thiserror = "1.0.49"
masking = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.4", package = "masking" }
common_enums = { version = "*", path = "../common_enums" }
strum = { version = "0.26", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
rust_decimal = { version = "1.0" }
time = { version = "0.3.36", features = ["parsing"] }
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "time"] }
url = "2.5.0"
uuid = { version = "1", features = ["v4"] }
http = "1.2.0"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "gzip", "multipart"] }
bytes = "1.6.0"

# Optional features
[features]
default = []
async_ext = ["dep:async-trait", "dep:futures"]

[dependencies.async-trait]
version = "0.1.74"
optional = true

[dependencies.futures]
version = "0.3.28"
optional = true