[package]
name = "composite-service"
version = "0.1.0"
edition = "2021"

[dependencies]
grpc-api-types = { path = "../grpc-api-types" }
tonic = "0.13.0"
connector-integration = { path = "../connector-integration" }
domain_types = { path = "../domain_types" }
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
common_utils = { path = "../common_utils", package = "ucs_common_utils" }
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", rev = "1d4377fae474b4a0e192bb776ddd16ec807beb77", package = "masking" }

[dev-dependencies]
prost = "0.13"
prost-types = "0.13"

[lints]
workspace = true
