[package]
name = "connector-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
domain_types = { path = "../domain_types" }
base64 = "0.21"
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
common_utils = { path = "../common_utils", package = "ucs_common_utils" }
interfaces = { path = "../interfaces" }
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", rev = "d88a79b231d748bc8ed21d297e4e8b3cf200a9a6", package = "masking" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
serde_with = "3.7.0"
uuid = { version = "1", features = ["v4"] }
error-stack = "0.4.0"
strum = { version = "0.26", features = ["derive"] }
time = "0.3.35"
url = "2.5.0"
urlencoding = "2.1.3"
cards = { path = "../cards", package = "ucs_cards" }
paste = "1.0"
reqwest = { version = "0.11.27", features = [
    "json",
    "rustls-tls",
    "gzip",
    "multipart",
] }
bytes = "1.6.0"
ring = "0.17"
aes = "0.8"
cbc = "0.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
tracing = { version = "0.1.40" }
encoding_rs = "0.8"
hex = "0.4.3"
qrcode = "0.14.1"
image = { version = "0.25.6", default-features = false, features = ["png"] }
thiserror = "1.0.69"
sha2 = "0.10"
rand = "0.8"
jsonwebtoken = "9.2"
html-escape = "0.2"

[lints]
workspace = true
