[package]
name = "domain_types"
version = "0.1.0"
edition = "2021"

[dependencies]
grpc-api-types = { version = "0.1.0", path = "../grpc-api-types" }
utoipa = { version = "4.2.0", features = [
    "preserve_order",
    "preserve_path_order",
] }

#third party dependencies
hyperswitch_domain_models = { path = "/Users/shivral.somani/Documents/Repos/hyper_switch/hyperswitch/crates/hyperswitch_domain_models", features = [
    "v1",
] }
thiserror = "1.0.49"
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
error-stack = "0.4.1"
common_enums = { path = "/Users/shivral.somani/Documents/Repos/hyper_switch/hyperswitch/crates/common_enums" }
cards = { path = "/Users/shivral.somani/Documents/Repos/hyper_switch/hyperswitch/crates/cards" }
common_utils = { path = "/Users/shivral.somani/Documents/Repos/hyper_switch/hyperswitch/crates/common_utils", features = [
    "async_ext",
    "metrics",
    "encryption_service",
    "keymanager",
] }
api_models = { path = "/Users/shivral.somani/Documents/Repos/hyper_switch/hyperswitch/crates/api_models", features = [
    "errors",
    "v1",
] }
hyperswitch_interfaces = { path = "/Users/shivral.somani/Documents/Repos/hyper_switch/hyperswitch/crates/hyperswitch_interfaces", features = [
    "v1",
] }
masking = { path = "/Users/shivral.somani/Documents/Repos/hyper_switch/hyperswitch/crates/masking" }

tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", default-features = true, features = [
    "env-filter",
    "json",
    "registry",
] }
tracing-attributes = "0.1.27"
