[package]
name = "external-services"
version = "0.1.0"
edition = "2021"

[dependencies]
domain_types ={ version = "*", path = "../domain_types"}
error-stack = "0.4.1"
serde = {version = "1.0.189" ,features = ["derive"]}
thiserror = "1.0.49"
clap = { version = "4.0", features = ["derive"] }
config = "0.14.0"  
serde_derive = "1.0"
serde_yaml = "0.8"  
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
mime = "0.3.17"
serde_json = "1.0.107"
hex = "0.4.3"
ring = { version = "0.17.8", features = ["std"] }
masking = { path = "/Users/utkarsh.pandey/Documents/repo/hyperswitch/crates/masking" }
hyperswitch_interfaces = { path = "/Users/utkarsh.pandey/Documents/repo/hyperswitch/crates/hyperswitch_interfaces", features = ["v1"] }
hyperswitch_domain_models = { path = "/Users/utkarsh.pandey/Documents/repo/hyperswitch/crates/hyperswitch_domain_models", features = ["v1"] }
common_utils = { path = "/Users/utkarsh.pandey/Documents/repo/hyperswitch/crates/common_utils", features = ["async_ext", "metrics", "encryption_service", "keymanager"] }
api_models = { path = "/Users/utkarsh.pandey/Documents/repo/hyperswitch/crates/api_models", features = ["errors", "v1"] }
strum = { version = "0.26.2", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "gzip", "multipart"] }
base64 = "0.21.2"
bytes = "1.6.0"
http = "1.2.0"
once_cell = "1.19.0"
async-trait = "0.1"
tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter", "json", "registry"] }
tracing-attributes = "0.1.27"