[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "connector_service_ffi"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# First-party dependencies
grpc-api-types = { path = "../grpc-api-types" }
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "2025.11.24.0", package = "masking" }
connector-integration = { path = "../connector-integration" }
external-services = { path = "../external-services" }
interfaces = { path = "../interfaces" }
domain_types = { path = "../domain_types" }
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
common_utils = { path = "../common_utils", package = "ucs_common_utils" }
ucs_env = { path = "../ucs_env" }

# Third-party dependencies
config = "0.14.0"
toml = "0.8"
error-stack = "0.4.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_path_to_error = "0.1.16"
http = "0.2.12"
tonic = "0.13.0"
paste = "1.0"
tracing = "0.1"
uniffi = { version = "0.28", optional = true }
prost = "0.13"
bytes = "1"
thiserror = "1"

[build-dependencies]
prost-build = "0.13"
uniffi = { version = "0.28", features = ["build"], optional = true }

[[bin]]
name = "uniffi-bindgen"
required-features = ["uniffi-cli"]

[features]
default = ["uniffi"]
uniffi = ["dep:uniffi"]
uniffi-cli = ["dep:uniffi", "uniffi/cli"]
c-ffi = []

[lints]
workspace = true
