[package]
name = "grpc-api-types"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.13.0"
axum = "0.8.3"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
prost-validate = { version = "0.2", features = ["derive"] }
regex = "1.0"

error-stack = "0.5.0"

[build-dependencies]
tonic-build = "0.13.0"
prost-build = "0.13.4"
heck = "0.5.0"
g2h = "0.2.0"
prost-validate-build = "0.2"
