[package]
name = "ucs-connector-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
grpc-server = { path = "../grpc-server" }
grpc-api-types = { path = "../grpc-api-types" }
ucs_env = { path = "../ucs_env" }
cards = { path = "../cards", package = "ucs_cards" }
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "2025.11.24.0", package = "masking" }

tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.13.0"
http = "1.2.0"
tower = "0.5.2"
tokio-stream = { version = "0.1.17", features = ["net"] }
tempfile = "3.19.1"
hyper-util = { version = "0.1.3", features = ["tokio"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
proptest = "1.6.0"
thiserror = "1.0"

[dev-dependencies]
serial_test = "3.2.0"

[lints]
workspace = true
