[package]
name = "ucs_env"
version = "0.1.0"
edition = "2021"


[dependencies]
# First-party dependencies
grpc-api-types = { path = "../grpc-api-types" }
connector-integration = { path = "../connector-integration" }
external-services = { path = "../external-services", default-features = false }
domain_types = { path = "../domain_types" }
interfaces = { path = "../interfaces" }
cards = { path = "../cards", package = "ucs_cards" }
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
common_utils = { path = "../common_utils", package = "ucs_common_utils" }
config_patch_derive = { path = "../config_patch_derive" }
hyperswitch_masking = { git = "https://github.com/juspay/hyperswitch", tag = "2025.11.24.0", package = "masking", default-features = false, features = ["alloc", "serde", "time"] }
tracing-kafka = { git = "https://github.com/juspay/framework-libs-rs", branch = "feat/kafka-writer", features = ["layer"], optional = true }

# Third-party dependencies
config = "0.14.0"
error-stack = "0.4.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.16"
thiserror = { workspace = true }
time = { version = "0.3.36", features = ["parsing"] }
tracing = { workspace = true }
tracing-appender = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.18", default-features = true, features = [
    "env-filter",
    "json",
    "registry",
] }
tracing-attributes = "0.1.27"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tonic = { workspace = true }
tonic-reflection = "0.13.0"
http = "1.2.0"
log_utils = { git = "https://github.com/juspay/framework-libs-rs", branch = "feat/kafka-writer", package = "log_utils", features = [
    "tracing",
] }
build_info = { git = "https://github.com/juspay/framework-libs-rs", branch = "feat/kafka-writer", package = "build_info", features = [
    "cargo-workspace",
    "framework-libs-members-env",
] }

[build-dependencies]
build_info = { git = "https://github.com/juspay/framework-libs-rs", branch = "feat/kafka-writer", package = "build_info", features = [
    "cargo-workspace-build",
    "vergen-gix-build",
    "framework-libs-members-env",
] }

[features]
default = []
kafka = ["tracing-kafka"]

[lints]
workspace = true