[package]
name = "example-dapr-kafka"
version = "0.1.0"
edition = "2021"

# Make this a standalone workspace
[workspace]

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[dependencies]
dapr = "0.12.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tonic = "0.8"
prost = "0.11"
reqwest = { version = "0.11", features = ["json"] }
# Removed common_utils dependency to simplify the example
