[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hs-paylib"
version = "0.0.4"
description = "Hyperswitch Payments SDK — Python client for connector integrations via UniFFI FFI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx[http2]>=0.27.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
payments = ["generated/*.dylib", "generated/*.so", "generated/*.py"]
