[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperswitch-prism"
version = "0.0.1"
description = "Hyperswitch Payments SDK — Python client for connector integrations via UniFFI FFI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx[http2]>=0.27.0",
    "protobuf>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
payments = ["generated/*.dylib", "generated/*.so", "generated/*.py"]
